--- a/index.html
+++ b/index.html
@@ -1,35 +1,79 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>Empresa</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
-    
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Empresa</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
+<head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
+	<title>Home</title>
+</head>
+<body>
+	<nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand text-white" href="index.html">PetPals</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="produtos.html">Nossos serviços</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sobre.html">Quem somos</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
     </nav>
-  </body>
+	<div class="container">
+    <div class="row">
+			<div class="col-12 p-3 m-3 text-center">
+				<h1>PetPals</h1>
+        <p class="pt-4">O resort premium para o conforto e felicidade dos seus animais de estimação.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 p-1 m-3 text-center">
+				<img src="media/banner.png" alt="">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 p-5 m-3">
+        <h2 class="pb-5">Nossos destaques</h2>
+				<h3>Acomodações Luxuosas:</h3>
+        <p>Oferecemos quartos espaçosos e confortáveis, equipados com camas macias e áreas de brincadeiras internas e externas. Garantimos que seu animal de estimação desfrute de uma estadia verdadeiramente mimada.</p>
+        <h3>Cuidados Veterinários Especializados:</h3>
+        <p>Parceria com veterinários especializados garante a saúde e o bem-estar dos nossos hóspedes. Seus animais de estimação estão em boas mãos com cuidados personalizados e atenção constante.</p>
+        <h3>Programas Recreativos e Sociais:</h3>
+        <p>Desde parquinhos planejados até sessões sociais interativas, oferecemos uma variedade de atividades recreativas para promover a estimulação mental e física do seu animal de estimação.</p>
+        <h3>Transmissão ao Vivo:</h3>
+        <p>Alivie suas preocupações ao acompanhar seu animal de estimação por meio da nossa opção de transmissão ao vivo. Nossas câmeras de última geração proporcionam uma visão da alegria e conforto que seus animais de estimação experimentam durante a estadia.</p>
+        <h3>Boutique de Delícias:</h3>  
+        <p>Explore nossa boutique repleta de produtos premium, desde brinquedos até roupas elegantes. No PetPals, garantimos que seus animais de estimação estejam sempre adornados com luxo e estilo.</p>    
+      </div>
+		</div>
+    <div class="row">
+        <div class="col-12 p-5 m-3">
+            <h2>Contato</h2>
+            <h4>Você pode entrar em contato conosco para mais informações, reservas ou esclarecimento de dúvidas. Estamos aqui para ajudar!</h4>
+            <h3>Endereço:</h3>
+            <p>PetPals Resort</p>
+            <p>Avenida dos Animais, 123</p>
+            <p>Cidade dos Bichinhos, Estado Feliz</p>
+            <p>CEP: 12345-678</p>
+            <h3>Telefone:</h3>
+            <p>(55) 1234-5678</p>
+            <h3>E-mail:</h3>
+            <p>contato@petpalsresort.com</p>
+            <h3>Horário de Atendimento:</h3>
+            <p>Segunda a Sexta: 8h às 18h</p>
+            <p>Sábado e Domingo: 9h às 15h</p>
+          </div>
+    </div>
+	</div>
+</body>
 </html>
